--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.1
+  sdk: ^3.5.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,6 +34,35 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
+  lottie: ^3.2.0
+  flutter_svg: ^2.0.16
+  salomon_bottom_bar: ^3.3.2
+  firebase_core: ^3.9.0
+  cloud_firestore: ^5.6.0
+  flutter_riverpod: ^2.6.1
+  firebase_auth: ^5.3.4
+  firebase_storage:
+  google_sign_in: ^6.2.2
+  animated_snack_bar: ^0.4.0
+  fpdart: ^1.1.1
+  toastification: ^2.2.0
+  permission_handler: ^11.3.1
+  pinput: ^5.0.0
+  intl_phone_field: ^3.2.0
+  youtube_player_flutter: ^8.1.0
+  video_player: ^2.8.1
+  auto_orientation: ^2.3.1
+  youtube_video_player: ^0.1.1
+  cached_network_image: ^3.4.1
+  flutter_pdfview: ^1.4.0
+  path_provider: ^2.1.5
+  sqflite: ^2.2.0
+  dio: ^5.7.0
+  phonepe_payment_sdk: ^2.0.3
+  crypto: ^3.0.6
+  msg91: ^1.0.5
+
 
 dev_dependencies:
   flutter_test:
